[tool.poetry]
name = "flask-oauthlib"
version = "10.0.1"
description = ""
authors = ["Devops <devops@thinktalentindia.com>"]
readme = "README.md"
packages = [{ include = "flask_oauthlib" }]

[tool.poetry.dependencies]
python = "^3.10"
oauthlib = "2.0.6"
flask = "^3.0.3"
mock = "^5.1.0"
flask-sqlalchemy = "^3.1.1"
cachelib = "0.1.1"
requests-oauthlib = "^1.3.0"


[[tool.poetry.source]]
name = "pypiserver"
url = "https://pypiserver.thinktalentws48.click/simple/"
priority = "secondary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
